--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "better-sqlite3": "^12.6.2",
     "next": "16.1.6",
     "openai": "^4.67.0",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.7.0"
