--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "better-sqlite3": "^12.6.2",
     "next": "16.1.6",
+    "nodemailer": "^8.0.1",
     "openai": "^4.67.0",
     "qrcode": "^1.5.4",
     "react": "19.2.3",
